update attendance
